FILE(GLOB_RECURSE MULTICAM_ASYNC_APP_SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
)

FILE(GLOB_RECURSE MULTICAM_ASYNC_APP_PRIVATE_HEADERS CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/*.h"
)

ADD_EXECUTABLE(multicam_async_app
    ${MULTICAM_ASYNC_APP_SOURCES}
    ${MULTICAM_ASYNC_APP_PRIVATE_HEADERS}
)


TARGET_LINK_LIBRARIES(multicam_async_app
    PRIVATE
        async_multi_cam
        consumers
        Threads::Threads
)

# TARGET_INCLUDE_DIRECTORIES(multicam_async_app
#     PUBLIC
#         ${CMAKE_SOURCE_DIR}/include
# )