FILE(GLOB_RECURSE ASYNC_MULTI_CAM_SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
)

FILE(GLOB_RECURSE ASYNC_MULTI_CAM_PRIVATE_HEADERS CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/*.h"
)


ADD_LIBRARY(async_multi_cam
    ${ASYNC_MULTI_CAM_SOURCES}
    ${ASYNC_MULTI_CAM_PRIVATE_HEADERS}
)
target_include_directories(async_multi_cam
    PUBLIC
        $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

TARGET_LINK_LIBRARIES(async_multi_cam
    PUBLIC
        realsense2::realsense2
        Threads::Threads
)