FILE(GLOB_RECURSE CONSUMERS_SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
)

FILE(GLOB_RECURSE CONSUMERS_PRIVATE_HEADERS CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/*.h"
)


ADD_LIBRARY(consumers
    ${CONSUMERS_SOURCES}
    ${CONSUMERS_PRIVATE_HEADERS}
)

TARGET_LINK_LIBRARIES(consumers
    PUBLIC
        ${OpenCV_LIBS}
)

target_include_directories(consumers
    PUBLIC
        $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

# message(STATUS "CMAKE_SOURCE_DIR = ${CMAKE_SOURCE_DIR}")